welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c : Color) {
  avance()
  while (!estSurBiscuit()) {
    if (isFacingTrail==true) {
      baisseBrosse()
      avance()
      leveBrosse()
    } else {
      gauche()
    }
  }
  prendBiscuit()
 }

def isFacingTrail():Boolean = {
  c=getCouleurSol()
  if (estFaceMur()) {
    return false
  } else {
    avance()
    if (getCouleurSol()==c) {
    recule()
    return true
    } else { 
    recule()
    return false
    }
  }
}